# Deep-Research-with-Long-Context-Memory-

./: .gitignore  DASHBOARD_UPDATES.md  DASHBOARD_VISUAL_GUIDE.md  MAX_SUBTASKS_FEATURE.md  PIPELINE_REFACTOR_SUMMARY.md  POLLING_BUG_FIX.md  README.md  REALTIME_GRAPH_IMPLEMENTATION.md  ROOT_NODE_COMPLETION_FIX.md  SHOW_ALL_CHILDREN_IMPLEMENTATION.md  TESTING_SUMMARY.md  pyproject.toml  pyrightconfig.json
dashboard/: .gitignore  DASHBOARD_THREE_PHASE_IMPLEMENTATION.md  FIVE_QUICK_FIXES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  QUICKSTART.md  README.md  THREE_PHASE_DASHBOARD_GUIDE.md  USAGE.md  requirements.txt  start.sh
dashboard/backend/: __init__.py  api.py  models.py  runner.py  scanner.py
dashboard/frontend/: package-lock.json  package.json
output/: presearcher-gpt5.jsonl  presearcher.jsonl  report.html  report.md  results-5.json  results.json
output/test_dags/: 20251125_112944.json  20251125_115025.json  20251125_150246.json  20251125_234036.json  20251125_234735.json
scripts/: render_markdown.py  test_dag_generation.py  test_dag_processing.py
src/: __init__.py  outline_generation.py
src/presearcher/: __init__.py  ansatz.py  dag_generation.py  dag_processor.py  demo_complete_run.py  final_report_generator.py  hierarchical_presearcher.py  init_pipeline.py  is_answerable.py  main.py  presearcher.py  purpose_generation.py  report_generation.py  subtask_generation.py
src/utils/: __init__.py  encoder.py  (+7 more)
tests/: README.md  __init__.py  run_tests.py  test_dag_generation.py  test_dag_processor.py  test_dataclasses.py  test_example.py  test_final_report_generator.py  test_literature_search.py  test_outline_generation.py  test_presearcher_agent.py  test_purpose_generation.py  test_rag_agent.py  test_report_generation.py
(+31 files in other folders)
